# NetEngine

./: .clang-format  .gitignore  .gitmodules  BigEarthNet.code-workspace  CMakeLists.txt  MNIST_test.h  MNIST_test.hpp  README.md  main.cpp  test.py
03_neural_net/: main.cpp
NetEngine/NetEngine/: Net.h
NetEngine/src/: Net.cpp  test.cpp  train.cpp
archive/: test.cpp
doc/: NetEngine.typ  bibliography.bib
documentation/: orga.xlsx
examples/: fashion_mnist.ipynb  mnist.ipynb
netengine/: CMakeLists.txt  netengine.cpp  setup.cfg  setup.py
netengine/NetEngine/: CMakeLists.txt  CUDA.h  DevTools.h  Exceptions.h  Net.h
netengine/NetEngine/src/: Net.cpp  Net.cu  run.cpp  run.cu  test.cpp  test.cu  train.cpp  train.cu
netengine/netlib.egg-info/: PKG-INFO  SOURCES.txt
netlib/: CMakeLists.txt
netlib/netlib/: exceptions.hpp  net.h  timer.hpp
netlib/src/: net.cpp  test.cpp  train.cpp
preprocessing/: sort_data.py
